...
import UIKit

class HeaderView: UIView {
    
    lazy var totalAmountLabel = buildLabel(text: L10n.HeaderView.totalAmount, textColor: .white, textAlignment: .center, font: .systemFont(ofSize: 14, weight: .semibold))
    
    lazy var amountTextField: UITextField = {
        let tf = UITextField()
        tf.translatesAutoresizingMaskIntoConstraints = false
        tf.keyboardType = .numberPad
        tf.textAlignment = .center
        tf.font = UIFont.systemFont(ofSize: 48, weight: .bold)
        tf.textColor = .white
...
