...
        setupNavigationBar()
        setupDelegates()
    }
    
    private func setupNavigationBar() {
        navigationItem.title = L10n.Calculator.title
        let clearButton = UIBarButtonItem(image: UIImage(systemName: "eraser.fill"), style: .plain, target: self, action: #selector(didTapClearUI))
        clearButton.accessibilityIdentifier = DSIdentifiers.clearButton
        navigationItem.rightBarButtonItem = clearButton
    }
    
    override func touchesBegan(_ touches: Set<UITouch>, with event: UIEvent?) {
        view.endEditing(true)
...
